# rust-playout-example

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: cli.rs  clock.rs  config.rs  live.rs  main.rs  media_info.rs  output.rs  playout.rs
src/input/: live.rs
src/output/: desktop.rs  encoded.rs  hls.rs  mod.rs  vtt.rs
src/utils/: cli.rs  config.rs  logging.rs  media_info.rs  mod.rs
