[package]
name = "ffmpeg-lib-playout-example"
version = "0.1.0"
edition = "2024"

[features]
desktop = ["dep:sdl2"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
ffmpeg-next = "8"
log = "0.4"
sdl2 = { version = "0.38", optional = true, features = ["unsafe_textures"] }
