[package]
name = "rust-playout-example"
version = "0.1.0"
edition = "2024"

[features]
default = ["desktop"]
desktop = ["dep:sdl2"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
ffmpeg-next = "8"
glob = "0.3"
log = { version = "0.4", features = ["std"] }
sdl2 = { version = "0.38", features = ["unsafe_textures"], optional = true }
